Intermediate commit (cleaning up CompletableFuture 5)